fix: prevenir salto de scroll del input usando overflow clip

--- a/apex/css/styles_widget.css
+++ b/apex/css/styles_widget.css
@@ -46,7 +46,7 @@
     height: 62px;
     display: flex;
     align-items: center;
-    overflow: hidden;
+    overflow: clip;
     width: 100%;
     box-sizing: border-box;
     touch-action: none;
